# calc-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: algorithms.rs  main.rs  startup.rs
src/shell/: mod.rs
