[package]
name = "calc-rs"
version = "2.0.0"
edition = "2021"
authors = ["arshergon", "arshergon@gmail.com"]
description = "A smart CLI calculator with variables, REPL, and step-by-step RPN evaluation using the Shunting Yard algorithm"
license = "MIT"
repository = "https://github.com/ArshErgon/calc-rs"
readme = "README.md"
keywords = ["cli", "calculator", "math", "rust", "rpn"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.0"
colored = "3.0.0"
rustyline = "17.0.2"
